kubernetes/apps/sonarr/03-sonarr-statefullset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sonarr
spec:
  serviceName: "sonarr-headless"
  replicas: 2
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      containers:
      - name: sonarr
        image: linuxserver/sonarr:preview
        ports:
        - containerPort: 8989
          name: web
        volumeMounts:
        - name: nfs-sonarr-config
          mountPath: /config
      volumes:
      - name: nfs-sonarr-config
        persistentVolumeClaim:
          claimName: sonarr-config
      restartPolicy: Always
