kubernetes/apps/sonarr/01-sonarr-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr-service
  labels:
    app: sonarr
spec:
  ports:
  - port: 8989
    name: web
  selector:
    app: sonarr
